# WSXDH_verification

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
calculate/: delta_calculator.py  partition_utils.py  rate_calculator.py  readme  sp2n_calculator.py  sp2n_data_supplier.py
calculate/old_results/: tables__sp4-sp30.tex
latex/: latex_document_generator.py  latex_table_generator.py
run/: print_tables.py  verify_conjectures.py
